test/compile_error/illegaladdr.conf.def
config illegal_addr_conf {
	ipv4val : ipv4addr = 256.256.256.256;
}
